<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:appcompat="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeIcon"
        android:orderInCategory="1"
        appcompat:showAsAction="always"
        android:icon="@drawable/home_icon"
        android:title="@string/home_title"
        />

    <item
        android:id="@+id/searchIcon"
        android:icon="@drawable/search_icon"
        android:title="@string/search_title"
        android:orderInCategory="2"
        appcompat:actionViewClass="androidx.appcompat.widget.SearchView"
        appcompat:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/action_settings_icon"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        appcompat:showAsAction="ifRoom"
        />

</menu>
