<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainActivity">

    <include layout="@layout/my_toolbar" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/restaurantsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_5dp"
            android:text="@string/restaurants_text_view"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:id="@+id/importRestaurantsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="@dimen/padding_5dp"
            android:text="@string/import_restaurants_button"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/selectAllRestaurantsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_5dp"
            android:text="@string/select_all_restaurants_button"/>

        <Button
            android:id="@+id/deselectAllRestaurantsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="@dimen/padding_5dp"
            android:text="@string/deselect_all_restaurants_button"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/deleteSelectedRestaurantsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_5dp"
            android:text="@string/delete_selected_restaurants_button"/>

        <Button
            android:id="@+id/exportSelectedRestaurantsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="@dimen/padding_5dp"
            android:text="@string/export_selected_restaurants_button"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/mainRestaurantsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_5dp">
        </ListView>

    </TableRow>

</TableLayout>
