<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <include layout="@layout/my_toolbar" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/importRestaurantsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_restaurants_text_view"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/selectAllFilesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/padding_5dp"
            android:text="@string/select_all_files_button"/>

        <Button
            android:id="@+id/deselectAllFilesButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingRight="@dimen/padding_5dp"
            android:text="@string/deselect_all_files_button"/>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/importSelectedFilesAsRestaurantsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_selected_files_as_restaurants_button"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/importRestaurantsListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_5dp">

        </ListView>

    </TableRow>

</TableLayout>
